--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,10 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="loader"></div>
-
     <div class="gallery"></div>
+
+    <button class="load-more" style="display: none">Load more</button>
+    <div class="loader" style="display: none"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
